[gd_scene load_steps=12 format=2]

[ext_resource path="res://Asset/Home/Latar Game Basic.png" type="Texture" id=1]
[ext_resource path="res://Asset/Quicksand/static/leslie.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scene/GAme/goodTouch/goodTouch.gd" type="Script" id=3]
[ext_resource path="res://Asset/goodTouch/Laki-laki Good Touch Depan.png" type="Texture" id=4]
[ext_resource path="res://Asset/goodTouch/Panah.png" type="Texture" id=5]
[ext_resource path="res://Asset/goodTouch/Laki-laki Good Touch Belakang.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=1]
size = 60
outline_size = 1
outline_color = Color( 1, 1, 1, 0 )
font_data = ExtResource( 2 )

[sub_resource type="CircleShape2D" id=2]
radius = 16.0

[sub_resource type="CircleShape2D" id=3]
radius = 24.0

[sub_resource type="CircleShape2D" id=4]
radius = 17.088

[sub_resource type="CircleShape2D" id=5]
radius = 18.9737

[node name="goodTouch" type="Node2D"]
script = ExtResource( 3 )

[node name="Control" type="Control" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="karakterDepan" type="TextureRect" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -408.0
margin_top = -152.0
margin_right = -108.0
margin_bottom = 148.0
mouse_filter = 2
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="karakterBelakang" type="TextureRect" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 48.0
margin_top = -160.0
margin_right = 348.0
margin_bottom = 140.0
mouse_filter = 2
texture = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control"]
modulate = Color( 0.286275, 0.286275, 0.286275, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -448.0
margin_top = -287.0
margin_right = 424.0
margin_bottom = -162.0
custom_fonts/font = SubResource( 1 )
text = "Letakan tanda Silang di bagian yang tidak boleh
disentuh..."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="object" type="Node2D" parent="."]

[node name="silang" type="Position2D" parent="object"]
position = Vector2( 600, 592 )

[node name="silang2" type="Position2D" parent="object"]
position = Vector2( 712, 592 )

[node name="AREA" type="Node2D" parent="."]

[node name="mulut" type="Area2D" parent="AREA"]
position = Vector2( 563, 298 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="AREA/mulut"]
position = Vector2( -24, 6 )
shape = SubResource( 2 )

[node name="dada" type="Area2D" parent="AREA"]
position = Vector2( 199, 320 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="AREA/dada"]
position = Vector2( 33, -24 )
shape = SubResource( 3 )

[node name="tangan" type="Area2D" parent="AREA"]
position = Vector2( 152, 414 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="AREA/tangan"]
shape = SubResource( 4 )

[node name="Kemaluan" type="Area2D" parent="AREA"]
position = Vector2( 560, 408 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="AREA/Kemaluan"]
position = Vector2( -24, 16 )
shape = SubResource( 5 )

[node name="pantat" type="Area2D" parent="AREA"]
position = Vector2( 1016, 392 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="AREA/pantat"]
position = Vector2( -24, 0 )
shape = SubResource( 5 )

[node name="kepala2" type="Area2D" parent="AREA"]
position = Vector2( 664, 448 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="AREA/kepala2"]
position = Vector2( 8, 8 )
shape = SubResource( 5 )

[node name="Panah" type="Sprite" parent="."]
position = Vector2( 452, 305 )
scale = Vector2( 1.35, 1 )
texture = ExtResource( 5 )

[node name="Panah4" type="Sprite" parent="."]
position = Vector2( 259.5, 408 )
scale = Vector2( 1.35, 1 )
texture = ExtResource( 5 )
flip_h = true

[node name="Panah3" type="Sprite" parent="."]
position = Vector2( 314.5, 328 )
scale = Vector2( 1.35, 1 )
texture = ExtResource( 5 )
flip_h = true
flip_v = true

[node name="Panah2" type="Sprite" parent="."]
position = Vector2( 447.5, 404 )
scale = Vector2( 1.35, 1 )
texture = ExtResource( 5 )

[node name="Panah5" type="Sprite" parent="."]
position = Vector2( 904, 392 )
scale = Vector2( 1.35, 1 )
texture = ExtResource( 5 )

[node name="Panah6" type="Sprite" parent="."]
position = Vector2( 760, 456 )
scale = Vector2( 1.35, 1 )
texture = ExtResource( 5 )
flip_h = true

[connection signal="body_entered" from="AREA/mulut" to="." method="_on_kepala_body_entered"]
[connection signal="body_exited" from="AREA/mulut" to="." method="_on_kepala_body_exited"]
[connection signal="body_entered" from="AREA/dada" to="." method="_on_dada_body_entered"]
[connection signal="body_exited" from="AREA/dada" to="." method="_on_dada_body_exited"]
[connection signal="body_entered" from="AREA/tangan" to="." method="_on_tangan_body_entered"]
[connection signal="body_exited" from="AREA/tangan" to="." method="_on_tangan_body_exited"]
[connection signal="body_entered" from="AREA/Kemaluan" to="." method="_on_Kemaluan_body_entered"]
[connection signal="body_exited" from="AREA/Kemaluan" to="." method="_on_Kemaluan_body_exited"]
[connection signal="body_entered" from="AREA/pantat" to="." method="_on_pantat_body_entered"]
[connection signal="body_exited" from="AREA/pantat" to="." method="_on_pantat_body_exited"]
[connection signal="body_entered" from="AREA/kepala2" to="." method="_on_kepala2_body_entered"]
[connection signal="body_exited" from="AREA/kepala2" to="." method="_on_kepala2_body_exited"]
